--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,59 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
         <link rel="stylesheet" href="assets/css/index.css">
+        <style>
+            /* Ajoutez votre CSS pour la navbar ici */
+nav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
+}
+
+            .scroll-link {
+                transition: all 0.5s ease-in-out;
+            }
+            .scroll-link:hover {
+                transform: translateY(-10px);
+            }
+            .scroll-link:active {
+                transform: translateY(10px);
+            }
+        </style>
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="#home" class="scroll-link">Home</a></li>
+                <li><a href="#shop" class="scroll-link">Shop</a></li>
+            </ul>
+        </nav>
+        <div id="home">
+            <!-- Contenu de la page d'accueil -->
+        </div>
+        <div id="shop">
+            <!-- Contenu de la page boutique -->
+        </div>
         <div id="splash" style="display:none">
             <img class="splash" src="assets/images/icon.png" />
             <p class="splash-message"></p>
@@ -13,5 +64,17 @@
             <progress value="0" max="0" class="progress"></progress>
         </div>
         <script src="assets/js/index.js" type="module"></script>
+        <script>
+            // Ajoutez votre JavaScript pour l'animation de défilement ici
+            document.querySelectorAll('.scroll-link').forEach(link => {
+                link.addEventListener('click', e => {
+                    e.preventDefault();
+                    const href = link.getAttribute('href');
+                    document.querySelector(href).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                });
+            });
+        </script>
     </body>
 </html>
